fix(home): display of sort options on IE9 (#1975)
Closes [BS-15496](https://bonitasoft.atlassian.net/browse/BS-15496)

--- a/frontend/app/js/home/home.less
+++ b/frontend/app/js/home/home.less
@@ -233,9 +233,7 @@ body {
   .switcher-label.true {
     color: @bonita-light-grey;
   }
-}
 
-.switcher {
   .switcher-label.false {
     color: @btn-bonita-default-bg;
   }
